--- a/src/pages/categoryPage/categoryPage.css
+++ b/src/pages/categoryPage/categoryPage.css
@@ -32,6 +32,11 @@
         display: none;
     }
 
+    .category-page .products .product-div .product-card-container {
+        width: 18rem;
+        margin: auto;
+    }
+
 }
 
 .category-page .category-front {
